Fixed top menu float on small screens.

--- a/themes/default-bootstrap/css/global.css
+++ b/themes/default-bootstrap/css/global.css
@@ -1903,6 +1903,9 @@ input[type="button"].btn-block {
     color: #333333;
     white-space: nowrap; }
     
+@media (min-width: 768px)
+{
+    
   .dropdown-menu > img{
       float:left;
       padding: 10px 4px 4px 10px;
@@ -1912,6 +1915,7 @@ input[type="button"].btn-block {
   
   .dropdown-menu > ul{
       float: right;
+  }
   }
     
      .dropdown-menu  li > a > span{
@@ -6116,7 +6120,7 @@ table.table_block td {
       #home-page-tabs > li a:hover {
         margin: -9px 0; } }
 
-.block {
+.block ul {
   padding-bottom: 20px; }
   @media (max-width: 767px) {
     .block {
