--- a/themes/default-bootstrap/css/modules/blockcategories/blockcategories.css
+++ b/themes/default-bootstrap/css/modules/blockcategories/blockcategories.css
@@ -222,7 +222,10 @@
     
     .dropdown a img{
         display: block;
-    }
+    
+        margin-left: auto;
+        margin-right: auto;
+}
     
  .dropdown a.menu2 img{
         /* display: none; */
@@ -235,6 +238,6 @@
 
     #categories_block_left
     {
-            margin-top: -1px;
+            margin-top: -2px;
     }        
 }
